[workspace]

resolver = "2"

members = [
    "common",
    "dmntk",
    "evaluator",
    "examples",
    "feel",
    "feel-grammar",
    "feel-evaluator",
    "feel-number",
    "feel-parser",
    "feel-temporal",
    "gendoc",
    "macros",
    "model",
    "model-evaluator",
    "recognizer",
    "server",
    "workspace"
]

[workspace.package]
version = "0.3.7"
authors = ["Dariusz Depta <depta@engos.de>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.10.2"
base64 = "0.22.1"
chrono = "0.4.40"
chrono-tz = "0.10.3"
convert_case = "0.8.0"
clap = { version = "4.5.16", features = ["cargo"] }
dfp-number-sys = "0.2.13"
difference = "2.0.0"
domrs = "=0.0.5"
markdown = "1.0.0-alpha.23"
once_cell = "1.21.3"
petgraph = "0.8.1"
quote = "1.0.40"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.100"
uuid = { version = "1.16.0", features = ["v4"] }
uriparse = "0.6.4"
url = "2.5.4"
urlencoding = "2.1.3"
walkdir = "2.5.0"
dmntk-common = "0.3.7"
dmntk-evaluator = "0.3.7"
dmntk-examples = "0.3.7"
dmntk-feel = "0.3.7"
dmntk-feel-evaluator = "0.3.7"
dmntk-feel-grammar = "0.3.7"
dmntk-feel-number = "0.3.7"
dmntk-feel-parser = "0.3.7"
dmntk-feel-temporal = "0.3.7"
dmntk-gendoc = "0.3.7"
dmntk-macros = "0.3.7"
dmntk-model = "0.3.7"
dmntk-model-evaluator = "0.3.7"
dmntk-recognizer = "0.3.7"
dmntk-server = "0.3.7"
dmntk-workspace = "0.3.7"
