[package]
name = "dmntk-evaluator"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL and DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common.workspace = true
dmntk-feel.workspace = true
dmntk-feel-evaluator.workspace = true
dmntk-feel-parser.workspace = true
dmntk-model-evaluator.workspace = true