[package]
name = "dmntk-feel-grammar"
version = "0.3.1"
authors.workspace = true
description = "DMNTK | FEEL grammar"
documentation = "https://docs.rs/dmntk-feel-grammar"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
convert_case.workspace = true
regex.workspace = true