[package]
name = "dmntk-feel-number"
version = "0.3.1"
authors.workspace = true
description = "DMNTK | FEEL number"
documentation = "https://docs.rs/dmntk-feel-number"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[features]

[dependencies]
dfp-number-sys.workspace = true
dmntk-common-1.workspace = true
dmntk-macros.workspace = true
