[package]
name = "dmntk-model"
version.workspace = true
authors.workspace = true
description = "DMNTK | DMN model and parser"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
petgraph.workspace = true
roxmltree.workspace = true
dmntk-common.workspace = true
dmntk-examples.workspace = true
dmntk-feel.workspace = true
dmntk-feel-parser.workspace = true
dmntk-macros.workspace = true
