[package]
name = "dmntk-workspace"
version = "0.3.1"
authors.workspace = true
description = "DMNTK | Workspace"
documentation = "https://docs.rs/dmntk-workspace"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
urlencoding.workspace = true
walkdir.workspace = true
dmntk-common.workspace = true
dmntk-feel.workspace = true
dmntk-feel-evaluator.workspace = true
dmntk-macros.workspace = true
dmntk-model.workspace = true
dmntk-model-evaluator.workspace = true

[dev-dependencies]
dmntk-examples.workspace = true